<resources>
    
    <string name="title_activity_maps">Pick Up Address</string>
    <string name="title_activity_deposit">Destination address</string>
    <string name="coursier_map_marker_name">Coursier Wallon</string>
    <string name="coursier_map_marker_snippet">Coursier wallon Namur\'s office</string>
    <string name="coursier_img_description">Coursier wallon\'s logo</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="text_separator">Or</string>
    <string name="guest_button">Continue As Guest</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password_text">Forgot password ?</string>
    <string name="my_line_tag" translatable="false">myLine</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register">Register</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="birthday_hint">Birthday</string>
    <string name="address_hint">Address</string>
    <string name="street_hint">Street</string>
    <string name="house_number_hint">N°</string>
    <string name="box_number_hint">Box N°</string>
    <string name="postcode_hint">Postal Code</string>
    <string name="home_label">Home</string>
    <string name="logout_label">Logout</string>
    <string name="my_profile_label">My profile</string>
    <string name="settings_label">Settings</string>
    <string name="error_empty_address">Address not selected!</string>

    <string name="connection_lost">Connection lost</string>
    <string name="empty_input_error">The email and the password can\'t be empty!</string>
    <string name="app_name">Coursier Wallon</string>
    <string name="addressPickerFragment_ok">Ok</string>
    <string name="addressPickerFragment_cancel">Cancel</string>
    <string name="addressPickerFragment_invalidAddress">Invalid address</string>
    <string name="datePickerFragment_erreur">Error</string>
    <string name="LoginActivity_Error">Something went wrong with the login</string>
    <string name="OrderConfirmation_TypeS">Parcel type S</string>
    <string name="OrderConfirmation_TypeM">Parcel type M</string>
    <string name="OrderConfirmation_TypeL">Parcel type L</string>
    <string name="OrderConfirmation_TypeXL">Parcel type XL</string>
    <string name="OrderConfirmation_NoSpec">Unspecified</string>
    <string name="OrderConfirmation_DelTypeNormal">delivery type Normal</string>
    <string name="OrderConfirmation_DelTypeSemiExpress">delivery type Semi Express</string>
    <string name="OrderConfirmation_DelTypeExpress">delivery type Express</string>
    <string name="OrderConfirmation_DelTypeNoSpec">Unspecified</string>
    <string name="OrderConfirmation_Added">Order Added</string>
    <string name="OrderConfirmation_Error">Something went wrong</string>
    <string name="SignUp_InfoError">Non valid infos</string>
    <string name="AddressPicker_AddAddress">Add an address</string>
    <string name="OrderConfirmation_parcel">Parcel :</string>
    <string name="OrderConfirmation_pick_up_address">Pick up address :</string>
    <string name="OrderConfirmation_deposit_address">Deposit address :</string>
    <string name="OrderConfirmation_delivery_type">Delivery type :</string>
    <string name="OrderConfirmation_estimated_price">Estimated price :</string>
    <string name="OrderConfirmation_Button_confirm">Confirm</string>
    <string name="OrderConfirmation_Button_cancel">Cancel</string>
    <string name="Activity_pick_up_date_and_time">Pick up date and time</string>
    <string name="Activity_deposit_date_and_time">Deposit date and time</string>
    <string name="home_parcel">Parcel</string>
    <string name="home_letter">Letter</string>
    <string name="select_the_parcel_type">Select the parcel type :</string>
    <string name="type_s">Type S</string>
    <string name="type_m">Type M</string>
    <string name="type_xl">Type XL</string>
    <string name="type_l">Type L</string>
    <string name="select_the_delivery_type">Select the delivery type:</string>
    <string name="normal_delivery">Normal delivery</string>
    <string name="semi_express_delivery">Semi-express delivery</string>
    <string name="express_delivery">Express delivery</string>

    <string name="order_menu_next">Next</string>
    <string name="HttpConnection_Unauthorized">Email or password is incorrect</string>
    <string name="HttpUrlConnection_ClientError">Client error</string>
    <string name="HttpUrlConnection_InternalError">The server is having some trouble</string>
    <string name="SignUp_Success">User successfully added</string>
    <string name="SignUp_Error">An error has been detected during the sign up</string>
    <string name="wieght_typeS">Weight : 10kg</string>
    <string name="width_type_S">Width : 40cm</string>
    <string name="length_type_M">Length : 60cm</string>
    <string name="weigth_type_M">Weight : 30kg</string>
    <string name="heigth_type_S">Height : 30cm</string>
    <string name="length_type_S">Length : 30cm</string>
    <string name="width_type_M">Width : 40cm</string>
    <string name="heigth_type_M">Height : 30cm</string>
    <string name="length_type_L">Length : 60cm</string>
    <string name="width_type_L">Width : 40cm</string>
    <string name="heigth_type_L">Height : 60cm</string>
    <string name="wiegth_type_XL">Weight : 100kg</string>
    <string name="length_type_XL">Length : 60cm</string>
    <string name="width_type_XL">Width : 80cm</string>
    <string name="heigth_type_XL">Height : 60cm</string>
    <string name="userLabel_signup">Lastname Firstname</string>
    <string name="userInput_signup">Lastname Firstname</string>
    <string name="dialog_add_address_street">Street</string>
    <string name="dialog_add_address_houseNumber">House number</string>
    <string name="dialog_add_address_boxNumber">Box number (fac)</string>
    <string name="dialog_add_address_locality">Locality</string>
    <string name="wiegth_type_L">Weight : 60kg</string>
    <string name="dialog_add_address_postalCode">PostalCode</string>
    <string name="next_button">next</string>
    <string name="date_And_Time">date And Time</string>
    <string name="type">type</string>
    <string name="Confirmation">Confirmation</string>
    <string name="bag_username">Lastname and firstname must be longeur than 3 caracter</string>
    <string name="bad_email">This email is invalid</string>
    <string name="bad_password">the password must longeur than 8 caracter must contains a capital letter and a number</string>
    <string name="password_mismatch">The password don\'t match</string>
    <string name="other_error">Unexpected error came out</string><![CDATA[
    >>>>>>> Temporary merge branch 2
]]>
</resources>
