<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/dialog_add_address_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/dialog_add_address_street" />

    <EditText
        android:id="@+id/dialog_add_address_houseNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/dialog_add_address_houseNumber" />

    <EditText
        android:id="@+id/dialog_add_address_boxNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/dialog_add_address_boxNumber" />

    <EditText
        android:id="@+id/dialog_add_address_locality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/dialog_add_address_locality" />

    <EditText
        android:id="@+id/dialog_add_address_postalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/dialog_add_address_postalCode"/>

</LinearLayout>