<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/coursierImg"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:padding="10dp"
        android:contentDescription="@string/coursier_img_description"
        app:srcCompat="@drawable/coursier_wallon_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginGrid"
        android:layout_below="@+id/coursierImg"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/login_logo" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_column="1"
            android:layout_row="0"
            android:hint="@string/email_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <ImageView
            android:id="@+id/passwordIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/password_logo" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_column="1"
            android:layout_row="1"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

    </GridLayout>

    <Button
        android:id="@+id/loginButton"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="11dp"
        android:background="@color/coursierColorPrimaryDarker"
        android:elevation="0dp"
        android:text="@string/login_button"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_below="@+id/loginGrid"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/forgotLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/forgot_password_text"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        tools:ignore="SmallSp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/separatorGrid"
        android:layout_below="@+id/forgotLink"
        android:layout_alignParentStart="true">

        <View
            android:id="@+id/leftLine"
            style="@style/separator"/>
        <TextView
            android:id="@+id/separatorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_separator"
            android:textColor="@android:color/white"/>
        <View
            android:id="@+id/rightLine"
            style="@style/separator"/>

    </GridLayout>

    <Button
        android:id="@+id/guestButton"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/guest_button"
        android:textColor="@android:color/white"
        android:background="@color/coursierColorPrimaryDarker"
        android:layout_below="@+id/separatorGrid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <!--<Button
        android:id="@+id/signUpButton"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:background="@color/coursierColorPrimaryDarker"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@+id/guestButton"
        android:layout_alignParentStart="true" />-->

</RelativeLayout>