<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/toolbar_custom"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="35dp"
        android:paddingStart="15dp">
        <GridLayout
            android:id="@+id/loginInfoGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/userIcon"
                android:src="@drawable/login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"/>
            <GridLayout
                android:id="@+id/userGrid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"

                android:layout_row="0"
                android:layout_column="1">
                <TextView
                    android:id="@+id/userLabel"
                    android:text="@string/userLabel_signup"
                    android:textSize="10dp"
                    android:textColor="@color/coursierColorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:paddingStart="5dp"
                    android:layout_row="0"
                    android:layout_column="0"/>
                <EditText
                    android:id="@+id/userInput"
                    android:hint="@string/userInput_signup"
                    android:textColorHint="@color/coursierColorPrimaryHint"
                    android:textColor="@color/coursierColorPrimary"
                    android:backgroundTint="@color/coursierColorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="fill"
                    android:layout_marginBottom="-6dp"
                    android:layout_row="1"
                    android:layout_column="0"/>
            </GridLayout>
            <ImageView
                android:id="@+id/emailIcon"
                android:src="@drawable/email_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginTop="25dp"/>
            <GridLayout
                android:id="@+id/emailGrid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"

                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginTop="25dp">
                <TextView
                    android:id="@+id/emailLabel"
                    android:text="@string/email_hint"
                    android:textSize="10dp"
                    android:textColor="@color/coursierColorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:paddingStart="5dp"
                    android:layout_row="0"
                    android:layout_column="0"/>
                <EditText
                    android:id="@+id/emailInput"
                    android:hint="@string/email_hint"
                    android:textColorHint="@color/coursierColorPrimaryHint"
                    android:textColor="@color/coursierColorPrimary"
                    android:backgroundTint="@color/coursierColorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="fill"
                    android:layout_marginBottom="-6dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:inputType="textEmailAddress"/>
            </GridLayout>
            <ImageView
                android:id="@+id/passwordIcon"
                android:src="@drawable/password_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginTop="25dp"/>
            <GridLayout
                android:id="@+id/passwordGrid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginTop="25dp">
                <TextView
                    android:id="@+id/passwordLabel"
                    android:text="@string/password_hint"
                    android:textSize="10dp"
                    android:textColor="@color/coursierColorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:paddingStart="5dp"
                    android:layout_row="0"
                    android:layout_column="0"/>
                <EditText
                    android:id="@+id/passwordInput"
                    android:hint="@string/password_hint"
                    android:textColorHint="@color/coursierColorPrimaryHint"
                    android:textColor="@color/coursierColorPrimary"
                    android:backgroundTint="@color/coursierColorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="fill"
                    android:layout_marginBottom="-6dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:inputType="textPassword"/>
            </GridLayout>
            <ImageView
                android:id="@+id/confirmPasswordIcon"
                android:src="@drawable/password_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginTop="25dp"/>
            <GridLayout
                android:id="@+id/confirmPasswordGrid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginTop="25dp">
                <TextView
                    android:id="@+id/confirmPasswordLabel"
                    android:text="@string/confirm_password_hint"
                    android:textSize="10dp"
                    android:textColor="@color/coursierColorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:paddingStart="5dp"
                    android:layout_row="0"
                    android:layout_column="0"/>
                <EditText
                    android:id="@+id/confirmPasswordInput"
                    android:hint="@string/confirm_password_hint"
                    android:textColorHint="@color/coursierColorPrimaryHint"
                    android:textColor="@color/coursierColorPrimary"
                    android:backgroundTint="@color/coursierColorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="fill"
                    android:layout_marginBottom="-6dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:inputType="textPassword"/>
            </GridLayout>
        </GridLayout>
        <Button
            android:id="@+id/register"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/coursierColorPrimary"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>